--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--css file link-->
     <link rel="stylesheet" href="style.css"/>
-    <title>Bootstrap 5  4th Project</title>
+
+    <!--<title>Bootstrap 5  4th Project</title>-->
+    <title>Mizanur Rahman Masum</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target="#menu-csroll">
 <!--Navbar section start here-->
