--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-md fixed-top" id="menu-csroll">
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img src="img/demo-logo.png" alt="" class="menu-icon w-50"/>
+                <img src="img/20349115.54351d49a7c70 (1).png" alt="" class="menu-icon w-25"/>
             </a>
             <button class="navbar-toggler" data-bs-target="#menunavbarlink" data-bs-toggle="collapse"type="button">
                 <i class="fas fa-bars text-white"></i>
