--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
            </div>
            <div class="col-md-4 mb-4 mb-md-0 footer-box">
                <h3 class="mb-3">CONTACT US</h3>
-               <p><i class="fas fa-map-marker-alt"></i>World trade center, Bangalore</p>
-               <p><i class="fas fa-phone-alt"></i>+880174445-5443</p>
-               <p><i class="fas fa-envelope"></i>xys@gmail.com</p>
+               <p><i class="fas fa-map-marker-alt"></i>World trade center,Dhaka</p>
+               <p><i class="fas fa-phone-alt"></i>+88</p>
+               <p><i class="fas fa-envelope"></i>masumt999@gmail.com</p>
            </div>
            <div class="col-md-4 mb-4 mb-md-0 footer-box">
                <h3 class="mb-3">SUBSCRIBE NEWSLTTER</h3>
