--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
            <div class="col-md-4 mb-4 mb-md-0 footer-box">
                <h3 class="mb-3">CONTACT US</h3>
                <p><i class="fas fa-map-marker-alt"></i>World trade center,Dhaka</p>
-               <p><i class="fas fa-phone-alt"></i>+88</p>
+               <p><i class="fas fa-phone-alt"></i>+8801780999575</p>
                <p><i class="fas fa-envelope"></i>masumt999@gmail.com</p>
            </div>
            <div class="col-md-4 mb-4 mb-md-0 footer-box">
