--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
    <div class="container text-light p-3 py-5">
        <div class="row">
            <div class="col-md-4 mb-4 mb-md-0 footer-box">
-               <img src="img/demo-logo.png" alt="" class="w-30 mb-3">
+               <img src="img/20349115.54351d49a7c70 (1).png" alt="" class="w-25 mb-3">
                <p class="lead">Subscribe easy tutorials toutube channel to watch more video on Website development,Digital Markating,Wordpress and graphics desing . Press ball icon to get notification</p>
            </div>
            <div class="col-md-4 mb-4 mb-md-0 footer-box">
