--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
         <div class="row mt-5 pt-3">
             <div class="col-md-6 user-details">
                 <img src="img/masum1.jpg" alt="" class="rounded-circle">
-                <p class=" d-inline-block"><b>Mizanur Rahman</b><br>Co-founder at xyz</p>
+                <p class=" d-inline-block"><b>Mizanur Rahman</b><br>Co-founder at MRM Company</p>
                 <p class="lead">Subscribe easy tutorials toutube channel to watch more video on Website development,Digital Markating,Wordpress and graphics desing</p>
             </div>
 
             <div class="col-md-6 user-details">
                 <img src="img/ashik.jpg" alt="" class="rounded-circle">
-                <p class=" d-inline-block"><b>Ashikur Rahman</b><br>Director at xyz</p>
+                <p class=" d-inline-block"><b>Ashikur Rahman</b><br>Director at MRM Company</p>
                 <p class="lead">Subscribe easy tutorials toutube channel to watch more video on Website development,Digital Markating,Wordpress and graphics desing</p>
             </div>
         </div>
