--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <div class="container p-3 py-5" id="home">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <h1>BEST DIGITAL AGENCY</h1>
+                <h1 class="best">BEST DIGITAL AGENCY</h1>
                 <p class="lead">Subscribe easy tutorials toutube channel to watch more video on Website development,Digital Markating,Wordpress and graphics desing</p>
-                <a href="#"><img src="img/play.png"alt="" class=""/><span>Watch tutorials</span></a>
+                <a href="#"><img src="img/play.png"alt="" class="watch"/>Watch tutorials</a>
                 
             </div>
             <div class="col-md-6">
