--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <h1 class="best">BEST DIGITAL AGENCY</h1>
-                <p class="lead">Subscribe easy tutorials toutube channel to watch more video on Website development,Digital Markating,Wordpress and graphics desing</p>
+                <p class="">Subscribe easy tutorials toutube channel to watch more video on Website development,Digital Markating,Wordpress and graphics desing</p>
                 <a href="#"><img src="img/play.png"alt="" class="watch"/>Watch tutorials</a>
                 
             </div>
